@@ -53,3 +53,4 @@ Haifeng Deng <haifeng.deng@samsung.com>
 Jérémy Zurcher <jeremy@asynk.ch>
 Vikram Narayanan <vikram186@gmail.com>
 Seong-ho Cho (DarkCircle) <darkcircle.0426@gmail.com>
+Patryk Kaczmarek <patryk.k@samsung.com>
