@@ -1017,19 +1017,41 @@ ecore_file_escape_name(const char *filename)
      {
         if ((q - buf) > (PATH_MAX - 6)) return NULL;
         if (
-            (*p == ' ') || (*p == '\t') || (*p == '\n') ||
-            (*p == '\\') || (*p == '\'') || (*p == '\"') ||
-            (*p == ';') || (*p == '!') || (*p == '#') ||
-            (*p == '$') || (*p == '%') || (*p == '&') ||
-            (*p == '*') || (*p == '(') || (*p == ')') ||
-            (*p == '[') || (*p == ']') || (*p == '{') ||
-            (*p == '}') || (*p == '|') || (*p == '<') ||
-            (*p == '>') || (*p == '?')
+            (*p == ' ') || (*p == '\\') || (*p == '\'') ||
+            (*p == '\"') || (*p == ';') || (*p == '!') ||
+            (*p == '#') || (*p == '$') || (*p == '%') ||
+            (*p == '&') || (*p == '*') || (*p == '(') ||
+            (*p == ')') || (*p == '[') || (*p == ']') ||
+            (*p == '{') || (*p == '}') || (*p == '|') ||
+            (*p == '<') || (*p == '>') || (*p == '?')
             )
           {
              *q = '\\';
              q++;
           }
+        else if (*p == '\t')
+          {
+             *q = '\\';
+             q++;
+             *q = '\\';
+             q++;
+             *q = 't';
+             q++;
+             p++;
+             continue;
+          }
+        else if (*p == '\n')
+          {
+            *q = '\\';
+            q++;
+            *q = '\\';
+            q++;
+            *q = 'n';
+            q++;
+            p++;
+	    continue;
+          }
+
         *q = *p;
         q++;
         p++;
